codegeneration and refactor taskhandler
